--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -200,15 +200,19 @@ ul ul {
 .list_no_style_li {
 	list-style-type: none;
 }
-a {
+a, a:focus {
 	color: inherit;
 	text-decoration: none;
+}
+button, button:focus {
+	color: inherit;
+	text-decoration: none;	
 }
 a:hover {
 	color: inherit;
 	text-decoration: underline;
 }
-.no_style_a {
+.no_style_a, .no_style_a:focus {
 	text-decoration: none;
 	font-style: normal;
 }
@@ -217,10 +221,13 @@ a:hover {
 	text-decoration: none;
 	font-style: normal;
 }
-.no_style_button {
+.no_style_button, .no_style_button:focus {
 	border: none;
 	background-color: transparent;
 	box-shadow: none;
+}
+.btn:focus {
+	color: inherit;
 }
 p {	
 	margin: 5px 10px 5px 10px;
@@ -280,7 +287,6 @@ strong {
 }
 
 
-
 /* ------------------------------------------------------ Header ------------------------------------------------------ */
 #header {
 	position: fixed;
@@ -303,7 +309,7 @@ strong {
 	display: inline-block;
 }
 
-.btn-log {
+.btn-log, .btn-log:focus {
 	margin-left: 10px;
 	margin-right: 10px;
 	background-color: transparent;
@@ -763,7 +769,18 @@ a.captionOrange:hover
 .btn-add-to-cart:hover, .btn-add-to-cart:active {
 	opacity: 0.7;
 }
-
+.btn-loading {
+	border: none;
+	background-color: transparent;
+	border-radius: 0px;
+	box-shadow: none;
+	width: 50px;
+	height: 50px;
+	background-image: url('../img/system/cart/loader.gif');
+	background-size: 100%;
+	position: relative;
+	top: -5px;
+}
 
 /* ------------------------------------------------------ Login ------------------------------------------------------ */
 .login_background {
@@ -784,8 +801,12 @@ a.captionOrange:hover
 .web_conditions_box {
 	margin-left: 20%;
 }
+.modal-content {
+	padding: 0px !important;
+}
 .modal-dialog {
-	background-color: black;
+	/*background-color: black;*/
+	background-color: #541009 ;
 	border: 1px solid white;
 	border-radius: 0;
 	color: white;
@@ -793,13 +814,28 @@ a.captionOrange:hover
 .modal-content, .modal-header, .modal-body, .modal-footer {
 	background-color: transparent;
 }
+.modal-footer {
+	padding-top: 5px;
+}
 .modal-backdrop {
   z-index: -1;
 }
+.modal_price {
+	color: #541009;
+	font-weight: 900;
+	font-size: 1.2em;
+	background-color: rgba(250,250,250,0.8);
+	padding: 5px;
+	padding-right: 2px;
+	border: 1px solid white;
+	margin: 10px;
+	min-height: 30px;
+}
 .btn-modal {
+	margin-top: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
-	font-size : 1.2em;
+	font-size : 1.1em;
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
