--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 
 <!-- BEGIN HEAD -->
-<head>
+<head id="website_head">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>
       {% block title %}
@@ -142,11 +142,11 @@
           'js/jquery-ui-1.9.1.min.js'
 
           'js/jquery.fullPage.js'
+          'js/jquery.slimscroll.min.js'
           %}
           <script type="text/javascript" src="{{ asset_url }}"></script>
         {% endjavascripts %}
 
-          <!-- 'js/jquery.slimscroll.min.js' -->
 
         <!-- END JAVASCRIPTS -->
   </body>
