--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -624,6 +624,11 @@ a.captionOrange:hover
 }
 
 
+.info_panel_details {
+	width: 300px;
+}
+
+
 .nav-tabs {
 	
 }
@@ -782,6 +787,8 @@ a.captionOrange:hover
 	top: -5px;
 }
 
+
+
 /* ------------------------------------------------------ Login ------------------------------------------------------ */
 .login_background {
 	background-color: black !important;
@@ -845,6 +852,46 @@ a.captionOrange:hover
 	background-color: rgba(250,250,250,0.4);
 	color: white;
 }
+
+.add_buttons_cart {
+	padding: 0;
+	text-align: center;
+	width: 20px;
+	height: 20px;
+	font-size: 1em;
+	color: black;
+	background-color: rgba(250,250,250,0.4);
+	border : 1px solid white;
+	border-radius: 10px;
+	position: relative;
+	top: 0px;
+}
+.add_buttons_cart:hover, .add_buttons_cart:active {
+	color: black;
+	background-color: rgba(250,250,250,0.9);
+}
+
+.delete_buttons_cart {
+	padding: 2px 8px;
+	text-align: center;
+	font-size: 1em;
+	color: black;
+	background-color: rgba(250,250,250,1);
+	border : 1px solid white;
+	border-radius: 0px;
+	position: relative;
+	top: 0px;
+}
+.delete_buttons_cart:hover, .delete_buttons_cart:active {
+	color: black;
+	background-color: red;
+	border : 1px solid red;
+}
+
+.table > tbody > tr:hover {
+	background-color: rgba(250,250,250,0.3);
+}
+
 
 /* ------------------------------------------------------ Footer ------------------------------------------------------ */
 .footer
